<resources>
    <string name="app_name">CarDiary</string>
    <string name="no_car_added_yet">No car added yet</string>
    <string name="add_my_car">Add My Car</string>
    <string name="total_price_auto_calculated">Total Price (auto calculated)</string>
    <string name="price_per_liter">Price per Liter</string>
    <string name="liters">Liters</string>
    <string name="date">Date</string>
    <string name="log_fuel_stop">Log Fuel Stop</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="get_location">Get Location</string>
    <string name="no_location">No location</string>
    <string name="take_receipt_photo">Take Receipt Photo</string>
    <string name="save_fuel_entry">Save Fuel Entry</string>
    <string name="odometer_km">Odometer (km)</string>
    <string name="receipt_photo">Receipt photo</string>
    <string name="save_repair_entry">Save Repair Entry</string>
    <string name="receipt_photo_repair">Receipt photo</string>
    <string name="take_receipt_photo_repair">Take Receipt Photo</string>
    <string name="notes_optional_repair">Notes (optional)</string>
    <string name="odometer_km_repair">Odometer (km)</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="date_repair">Date</string>
    <string name="log_repair">Log Repair</string>
    <string name="history">History</string>
    <string name="no_entries_yet">No entries yet</string>
    <string name="my_car">My Car</string>
    <string name="total_fuel">Total Fuel</string>
    <string name="no_cost">0.00 EUR</string>
    <string name="total_cost_fuel_repairs">Total Cost (Fuel + Repairs)</string>
    <string name="_0">0</string>
    <string name="total_entries">Total Entries</string>
    <string name="l_100km">-- L/100km</string>
    <string name="avg_consumption">Avg Consumption</string>
    <string name="_0_00_eur">0.00 EUR</string>
    <string name="total_repairs">Total Repairs</string>
</resources>